footer Section Update

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <h2>Discover Toyota</h2>
         </div>
         <div>
-            <ul class="menu-horizontal border-b-2 gap-4 border-b-slate-400 w-[38rem] items-center text-base font-bold ml-[35rem] gap-6 mt-7 cursor-pointer">
+            <ul class="menu-horizontal border-b-2  border-b-slate-400 w-[38rem] items-center text-base font-bold ml-[35rem] gap-6 mt-7 cursor-pointer">
                 <li class="border-b-2 ml-20 border-black border-transparent hover:border-black">Featured Stories</li>
                 <li class="border-b-2 border-black border-transparent hover:border-black">Vehicles & Technology</li>
                 <li class="border-b-2 border-black border-transparent hover:border-black ">Offers & Services</li>
@@ -527,6 +527,136 @@
               </div>
         </div>
     </section>
+
+    <section class="w-full h-[700px]">
+        <div class="px-[93px] absolute grid grid-cols-3 gap-10">
+            <div class="mb-20">
+                <div class="h-[640px] w-[500px] shadow-2xl rounded-lg ">
+                    <img class="h-[640px] w-[500px] rounded-lg " src="image/Toyota_Visa_Signature.jpg" alt="">
+                </div>
+                <div class="mt-[-15rem] text-white ml-10">
+                    <p class="mb-3 text-lg">OFFERS & SERVICES</p>
+                    <h2 class="text-4xl font-bold mb-5">Toyota Rewards Visa <br> Signature®</h2>
+                    <p id="Card_description" class="mb-5">Earn more with Toyota Rewards Visa Signature® <br> Credit Card</p>
+                    <button class="btn border-2 px-7 rounded-full text-xl"><a href="#">Learn More</a></button>
+                </div>
+            </div>
+            <div class="mb-20">
+                <div class="h-[640px] w-[500px] shadow-2xl rounded-lg ">
+                    <img class="h-[640px] w-[500px] rounded-lg " src="image/3x4_SmartPath.png" alt="">
+                </div>
+                <div class="mt-[-15rem] text-white ml-10">
+                    <p class="mb-3 text-lg">OFFERS & SERVICES</p>
+                    <h2 class="text-4xl font-bold mb-5">An Easier Way to Buy Your <br> Next Toyota</h2>
+                    <p id="Card_description" class="mb-5">SmartPath helps you find your Toyota, customize terms <br> and finalize your purchase—all online.</p>
+                    <button class="btn border-2 px-7 rounded-full text-xl"><a href="#">Learn More</a></button>
+                </div>
+            </div>
+            <div class="mb-20">
+                <div class="h-[640px] w-[500px] shadow-2xl rounded-lg ">
+                    <img class="h-[640px] w-[500px] rounded-lg " src="image/3x4_ToyotaCare.jpg" alt="">
+                </div>
+                <div class="mt-[-15rem] text-white ml-10">
+                    <p class="mb-3 text-lg">OFFERS & SERVICES</p>
+                    <h2 class="text-4xl font-bold mb-5">Toyota Cares</h2>
+                    <p id="Card_description" class="mb-5">Every Toyota comes with a peace-of-mind two years of no <br> cost maintenance and Roadside Assistance. *</p>
+                    <button class="btn border-2 mt-10 px-7 rounded-full text-xl"><a href="#">Learn More</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer start -->
+    
+    <div class="absolute mt-10 px-14 pl-24">
+        <div class="grid grid-cols-2  items-center">
+            <div class="flex items-center mt-10 justify-center gap-6">
+                <h2 class=" text-lg mt-[-5px] font-bold"><a href="#">Accessibility</a></h2>
+                <p class="flex justify-center items-center gap-4"><a class=" text-base font-bold" href="#">YOUR PRIVACY CHOICES YOUR PRIVACY CHOICES</a><img class="w-12" src="image/privacyoptions.svg" alt=""></p>
+                <h3 class=" mt-[-5px] text-lg font-bold">Cookie Consent Options</h3>
+            </div>
+            <div class=" ml-32">
+                <button class="btn border-2 mt-8 px-7 text-white hover:bg-transparent hover:text-black bg-red-700 rounded-full text-xl"><a href="#">Manage Preferences</a></button>
+                <ul class="menu-horizontal text-3xl ml-6 gap-6">
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"></a><i class="fa-brands fa-x-twitter"></i></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer pt-56  bg-base-200 px-14 pl-24 p-10">
+                <nav>
+                    <h6 class="footer-title">SHOPPING TOOLS</h6>
+                    <a href="#" class="link link-hover">Trade-In Value</a>
+                    <a href="#" class="link link-hover">Build Your Toyota</a>
+                    <a href="#" class="link link-hover">Search Inventory</a>
+                    <a href="#" class="link link-hover">Find a Dealer</a>
+                    <a href="#" class="link link-hover">Shop Online With SmartPath</a>
+                    <a href="#" class="link link-hover">Local Specials</a>
+                    <a href="#" class="link link-hover">What Fits My Budget</a>
+                    <a href="#" class="link link-hover">Payment Estimator</a>
+                    <a href="#" class="link link-hover">Request a Quote</a>
+                    <a href="#" class="link link-hover">Toyota Certified Used Vehicles</a>
+                  </nav>
+                  <nav>
+                    <h6 class="footer-title">VEHICLES</h6>
+                    <a href="#" class="link link-hover">All Toyota Vehicles</a>
+                    <a href="#" class="link link-hover">SUVs</a>
+                    <a href="#" class="link link-hover">Trucks</a>
+                    <a href="#" class="link link-hover">Cars</a>
+                    <a href="#" class="link link-hover">Crossovers</a>
+                    <a href="#" class="link link-hover">Electrified Vehicles</a>
+                    <a href="#" class="link link-hover">Hybrids</a>
+                    <a href="#" class="link link-hover">Hybrid Cars</a>
+                    <a href="#" class="link link-hover">Hybrid SUVs</a>
+                    <a href="#" class="link link-hover">TRD Pro Series</a>
+                  </nav>
+                  <nav>
+                    <h6 class="footer-title">HELPFUL LINKS</h6>
+                    <a href="#" class="link link-hover">Dealers</a>
+                    <a href="#" class="link link-hover">Deals and Incentives</a>
+                    <a href="#" class="link link-hover">Audio Multimedia & Connected <br> Services</a>
+                    <a href="#" class="link link-hover">Mobile Phone Compatibility</a>
+                    <a href="#" class="link link-hover">Mobility</a>
+                    <a href="#" class="link link-hover">Toyota Fleet</a>
+                    <a href="#" class="link link-hover">Rent a Toyota</a>
+                    <a href="#" class="link link-hover">Toyota Financial Services</a>
+                    <a href="#" class="link link-hover">Southeast Toyota Finance</a>
+                    <a href="#" class="link link-hover">Toyota Insurance</a>
+                  </nav>
+                  <nav>
+                    <h6 class="footer-title">OWNERS</h6>
+                    <a href="#" class="link link-hover">Owners Home</a>
+                    <a href="#" class="link link-hover">Privacy policy</a>
+                    <a href="#" class="link link-hover">ToyotaCare & Maintenance <br> Plans</a>
+                    <a href="#" class="link link-hover">Safety Recalls & Service <br> Campaigns</a>
+                    <a href="#" class="link link-hover">Service Centers</a>
+                    <a href="#" class="link link-hover">Service Specials</a>
+                    <a href="#" class="link link-hover">Safety Hub</a>
+                    <a href="#" class="link link-hover">Schedule Service</a>
+                    <a href="#" class="link link-hover">Warning Lights</a>
+                    <a href="#" class="link link-hover">Manuals & Warranties</a>
+                  </nav>
+                  <nav>
+                    <h6 class="footer-title">ABOUT TOYOTA</h6>
+                    <a href="#" class="link link-hover">Careers</a>
+                    <a href="#" class="link link-hover">About Us</a>
+                    <a href="#" class="link link-hover">Our Company</a>
+                    <a href="#" class="link link-hover">Toyota Outfitters</a>
+                    <a href="#" class="link link-hover">Newsroom</a>
+                    <a href="#" class="link link-hover">Toyota Worldwide</a>
+                    <a href="#" class="link link-hover">Toyota Racing</a>
+                  </nav>
+      </footer>
+
+
+
+    <!-- Footer End -->
+
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.0.2/glide.js"></script>
